<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/primera"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondomistico"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/esp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/aclonica"
        android:onClick="click"
        android:text="@string/espaniol"
        android:textColor="#D1C4E9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/ingresa_tu_numero_de_cuenta_unam"
        android:textColor="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.644" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/ingresa_tu_correo_electronico"
        android:textColor="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/anio"
        android:textColor="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.795"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/dia"
        android:textColor="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584" />

    <EditText
        android:id="@+id/anio"
        android:layout_width="96dp"
        android:layout_height="45dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:hint="@string/yyyy"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="#FEFEFE"
        android:textColorHint="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/dia"
        android:layout_width="96dp"
        android:layout_height="45dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:hint="@string/dd"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:textColor="#FEFEFE"
        android:textColorHint="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/apellidom"
        android:layout_width="127dp"
        android:layout_height="40dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:hint="@string/apellido_materno"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="60"
        android:textColor="#FEFEFE"
        android:textColorHint="#FEFEFE"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="127dp"
        android:layout_height="40dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:hint="@string/nombre_s"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="60"
        android:textColor="#FEFEFE"
        android:textColorHint="#FEFEFE"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/horoscoteca"
        android:textColor="#FEFEFE"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/aclonica"
        android:onClick="click"
        android:text="@string/ver_datos"
        android:textColor="#D1C4E9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951" />

    <Button
        android:id="@+id/ing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/aclonica"
        android:onClick="click"
        android:text="@string/ingles"
        android:textColor="#D1C4E9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/ingresa_tus_datos_y_conoce_tu_signo_zodiacal"
        android:textColor="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/indique_su_idioma_de_preferencia"
        android:textColor="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <EditText
        android:id="@+id/apellidop"
        android:layout_width="127dp"
        android:layout_height="40dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:hint="@string/apellido_paterno"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="60"
        android:textColor="#FEFEFE"
        android:textColorHint="#FEFEFE"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/mes"
        android:layout_width="96dp"
        android:layout_height="45dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:hint="@string/mm"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:textColor="#FEFEFE"
        android:textColorHint="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/ingresa_tu_fecha_de_nacimiento"
        android:textColor="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/mes"
        android:textColor="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:hint="@string/ejemplo_gmail_com"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#FEFEFE"
        android:textColorHint="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:hint="@string/_000000000"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="9"
        android:textColor="#FEFEFE"
        android:textColorHint="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>